refactor(ReservationWaitingResponse): 예약 대기정보가 포함된 응답 DTO 인터페이스 도입